--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,7 +15,8 @@
     </LinearLayout>
     <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/FooterLayout">
     	<LinearLayout android:id="@+id/innerLinear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:baselineAligned="false" android:orientation="horizontal">
-
+        	<ImageView android:src="@drawable/addidaslogo" android:id="@+id/adidasLogo" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_width="wrap_content" android:layout_gravity="left" android:layout_weight="1"></ImageView>
+        	<ImageView android:src="@drawable/uefa_logo" android:id="@+id/uefaLogo" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_gravity="right"  android:layout_width="wrap_content" android:layout_weight="1"></ImageView>
         </LinearLayout>
     </RelativeLayout>
     
