--- a/res/layout/order.xml
+++ b/res/layout/order.xml
@@ -10,20 +10,18 @@
     </LinearLayout>
 	    <LinearLayout android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
 	        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
-	    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="fill_parent">
-	        <TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:text="@string/Total"></TextView>
-	        <TextView android:layout_height="wrap_content" android:id="@+id/TotalBillTextView" android:text="TextView" android:layout_width="wrap_content"></TextView>
-	        <Button android:id="@+id/button8" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/ResetButton" android:fadingEdge="horizontal" ></Button>
-	        <Button android:text="@string/OrderButton" android:id="@+id/button9" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
+	    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="fill_parent" android:orientation="horizontal">
+	        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/Total" android:textColor="#000000" android:textSize="30dip" android:layout_gravity="left" android:id="@+id/TotalBillTextView"></TextView>
+	        <Button android:layout_width="wrap_content" android:text="@string/ResetButton" android:fadingEdge="horizontal" android:layout_gravity="right" android:id="@+id/ResetButton" android:layout_height="fill_parent"></Button>
 	    </LinearLayout>
         </LinearLayout>
 	        <ViewFlipper android:layout_height="wrap_content" android:id="@+id/viewFlipper1" android:layout_width="fill_parent">
-	            <ListView android:layout_height="wrap_content" android:id="@+id/listView" android:layout_width="fill_parent"></ListView>
+	            <ListView android:layout_height="wrap_content" android:id="@+id/listView" android:layout_width="fill_parent" android:background="@drawable/button_background"></ListView>
 	            <LinearLayout android:orientation="vertical" android:layout_height="fill_parent" android:id="@+id/orderView" android:layout_width="fill_parent">
 	                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="textMultiLine" android:editable="false" android:id="@+id/OrderEditText">
 	                    <requestFocus></requestFocus>
 	                </EditText>
-	                <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Button" android:id="@+id/SendOrderButton"></Button>
+	                <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/SendOrderButton" android:text="@string/SendOrderButtonText"></Button>
 	            </LinearLayout>
 	        </ViewFlipper>
     </LinearLayout>
