--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -8,9 +8,12 @@
         <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tjtlogo" android:id="@+id/imageView2"></ImageView>
         
     </LinearLayout>
-    <LinearLayout android:id="@+id/BodyLayout" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/VenueInfoTitle" android:text="@string/VenueInfoTitleText"></TextView>
-        <Button android:layout_width="wrap_content" android:id="@+id/SeatingPlanButton" android:layout_height="wrap_content" android:text="@string/SeatingPlanButtonText"></Button>
+    <LinearLayout android:id="@+id/BodyLayout" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
+        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/VenueInfoTitle" android:text="@string/VenueInfoTitleText" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:textSize="30dip" android:textColor="#000000" android:layout_weight="1"></TextView>
+        <TextView android:text="Seat Number: 10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/SeatTextView" android:textSize="20dip" android:textColor="#000000" android:layout_gravity="center_horizontal" android:layout_weight="1"></TextView>
+        <TextView android:text="Row Number : 5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/RowTextView" android:textSize="20dip" android:textColor="#000000" android:layout_gravity="center_horizontal" android:layout_weight="1"></TextView>
+        <TextView android:text="Standing   : ?" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/StandingTextView" android:textSize="20dip" android:textColor="#000000" android:layout_gravity="center_horizontal" android:layout_weight="1"></TextView>
+        <Button android:id="@+id/SeatingPlanButton" android:layout_height="wrap_content" android:text="@string/SeatingPlanButtonText" android:layout_weight="1" android:layout_gravity="fill_horizontal" android:layout_width="fill_parent"></Button>
     </LinearLayout>
     <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/FooterLayout">
     	<LinearLayout android:id="@+id/innerLinear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:baselineAligned="false" android:orientation="horizontal">
