--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,13 +5,12 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" android:background="@drawable/grass_background1">
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/HeaderLayout" android:gravity="center">
-        <ImageView android:src="@drawable/tjtlogo" android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:layout_height="wrap_content"></ImageView>
-        
+        <ImageView android:src="@drawable/tjtlogo" android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:layout_height="wrap_content"></ImageView>    
     </LinearLayout>
     <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center|center_vertical" android:layout_gravity="center_vertical" android:orientation="vertical">
-        <ImageButton android:src="@drawable/refreshmentsbutton" android:layout_height="wrap_content" android:id="@+id/refreshmentsButton" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal"></ImageButton>
-        <ImageButton android:src="@drawable/promotionsbutton" android:layout_height="wrap_content" android:id="@+id/promotionsButton" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal"></ImageButton>
-        <ImageButton android:src="@drawable/infobutton" android:layout_height="wrap_content" android:id="@+id/infoButton" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal"></ImageButton>
+        <ImageView android:src="@drawable/refreshmentsbutton" android:layout_height="wrap_content" android:id="@+id/refreshmentsButton" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal"></ImageView>
+        <ImageView android:src="@drawable/promotionsbutton" android:layout_height="wrap_content" android:id="@+id/promotionsButton" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal"></ImageView>
+        <ImageView android:src="@drawable/infobutton" android:layout_height="wrap_content" android:id="@+id/infoButton" android:layout_width="fill_parent" android:layout_gravity="fill_horizontal"></ImageView>
     </LinearLayout>
     <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/FooterLayout">
     	<LinearLayout android:id="@+id/innerLinear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:baselineAligned="false" android:orientation="horizontal">
